# my_coin

./: .gitignore  README.md  acct.py  blockchain.py  current_blockchain.txt  merkle_tree.py  pandoc.yaml  resume.md  tools.py  tracker.py  whitepaper_draft.md
client/: apply_for_acct2anon.py  apply_for_anon_pay.py  apply_for_blue.py  core.py
demo/: demo1_bad.py  demo1_good.py  demo2_good.py  demo3_bad.py  demo3_good.py  demo4_bad.py  demo4_good.py  demo5.py
docs/: blockchain_header_specs.md
docs/acct/: account_specs.md  account_specs2.md  get_acct_info.md
docs/acct_to_anon_commit/: how_to_apply_for_acct2anon.md  lst_of_txs_in_blocks_acct2anon.md  zkproof_acct_to_anon_specs.md
docs/anon_pay/: how_to_apply_for_anon_pay.md  lst_of_txs_in_blocks_anon_pay.md  zkproof_anon_pay.md
docs/blue_apply/: how_to_apply_for_blue.md  lst_of_txs_in_blocks_blue_apply.md  zkproof_ii_blue_apply.md
node/: core.py  handle_acct2anon_apply.py  handle_anon_pay_apply.py  handle_blue_applies.py  handle_get_acct_info.py  handle_transfer_apply.py  utils.py
wrappers/: pasta_ecc_wrapper.py  poseidon_hash_wrapper.py  zkproof_for_acct_to_anon_tx_wrapper.py  zkproof_for_anon_pay_wrapper.py  zkproof_for_ii_blue_apply_wrapper.py
zkcrypto/: Cargo.toml
zkcrypto/src/: ecc_chip.rs  lib.rs  pasta_ecc.rs  poseidon_chip.rs  poseidon_hash.rs  zkproof_for_acct_to_anon_tx_evil_gen.rs  zkproof_for_acct_to_anon_tx_gen.rs  zkproof_for_acct_to_anon_tx_verifier.rs  zkproof_for_anon_pay_gen.rs  zkproof_for_anon_pay_verify.rs  zkproof_for_ii_blue_apply_gen.rs  zkproof_for_ii_blue_apply_verifier.rs
(+12 files in other folders)
