[package]
name = "zkcrypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkcrypto"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.17.3", features = ["extension-module"] }

hex = "0.4"
light-poseidon = "0.4.0"

ark-bn254     = "0.5.0"
ark-ff        = "0.5.0"
ark-ec        = "0.5.0"
ark-serialize = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-groth16   = "0.5.0"
ark-relations = "0.5.0"
ark-r1cs-std  = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["crh", "sponge", "r1cs"] }
ark-std       = "0.5.0"


halo2_proofs  = { version = "0.3.1" }
halo2_gadgets = { version = "0.3.1" }
pasta_curves  = "0.5.1"

rand       = "0.8"
rand_core  = "0.6.4"
blake2     = "0.10"
subtle     = "2.4"
ff = "0.13.1"

[features]
default = []






